<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trainsSearch.MainActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:paddingLeft="4dp"
            android:minWidth="40dp"
            android:paddingRight="4dp"
            android:id="@+id/fromText"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/from"/>

        <AutoCompleteTextView
            android:id="@+id/start_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:minHeight="48dp"
            android:completionThreshold="2"
            app:backgroundTint="@color/secondaryDarkColor"
            android:hint="@string/startingPointQuestion"
            android:padding="10dp"
            android:inputType="text" />

        <TextView
            android:paddingLeft="4dp"
            android:minWidth="40dp"
            android:paddingRight="4dp"
            android:id="@+id/toText"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/to"/>

        <AutoCompleteTextView
            android:id="@+id/end_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:minHeight="48dp"
            android:hint="@string/destinationQuestion"
            app:backgroundTint="@color/secondaryDarkColor"
            android:completionThreshold="2"
            android:importantForAutofill="no"
            android:inputType="text"/>
</LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:layout_height="match_parent">
        <Button
            android:id="@+id/getTimesButton"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_train_black_24dp"
            android:text="@string/get_times" />
        </LinearLayout>
    </RelativeLayout>